[package]
name = "advent_of_code"
version = "0.8.0"
edition = "2021"
default-run = "advent_of_code"
publish = false

[dependencies]
pico-args = "0.5.0"
indextree = "4.5.0"
itertools = "0.10.5"
regex = "1.7.0"
num-complex = "0.4.2"
rayon = "1.6.1"
rustc-hash = "1.1.0"
peg = "0.8.1"
num = "0.4.0"
derive_more = "0.99.17"
